--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ body {
 .first-part {
   background-color: azure;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   width: 100%;
-  /* position: fixed; */
-  /* z-index: 500px; */
+   /* position: fixed; 
+   z-index: 500px;  */
 }
 .logo{
   width:80px;
@@ -54,6 +55,7 @@ body {
 
 .second-part{
 display: flex;
+
 }
 
 .main-1{
@@ -107,6 +109,7 @@ span{
 }
 .edu{
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   flex-direction: row;
 }
@@ -121,6 +124,14 @@ span{
 .card:hover{
   box-shadow: 0 8px 30px #cc6ce668;
 }
+
+.card-img{
+  width:642px;
+  height:361px;
+}
+
+
+
 
 
 /**/
@@ -151,6 +162,7 @@ box-shadow: 0 8px 30px #cc6ce668;
 
 .proj2{
   display: flex;
+  
   justify-content: center;
   flex-direction: row;
   width: 990px;
@@ -169,6 +181,15 @@ box-shadow: 0 8px 30px #cc6ce668;
   font-weight: bold;
   font-size: 13px;
 }
+
+
+.ex-img1{
+  width:642px;
+  height:361px;
+}
+
+
+
 /**/
 
 .skill-h2{
@@ -181,6 +202,7 @@ padding: 20px;
 .six{
   margin: 10px;
   display: flex;
+
   
   justify-content: space-evenly;
   
@@ -218,6 +240,7 @@ padding: 20px;
 
  .container7{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   
@@ -267,13 +290,462 @@ padding: 20px;
   .last{
     display: flex;
     flex-direction: column;
-   
+   flex-wrap: wrap;
   }
 
 
 /**/
-@media screen and (min-width:375px) and (max-width: 667px) {
+
+
+
+
+
+/* CSS for screens smaller than 600px */
+@media (max-width: 600px) {
+ 
+  .nav-bar  { width: 100%;
+   
+  }
+  
+.logo{
+  margin: 10px;
+}
+
+.nav-bar{
+  margin: 1%;
+  
+  
+}
+/* .main-1{
+  width: 20%;
+} */
+
+.card{
+  width: 100%;
+  margin: 2%;
+}
+
+.proj2{
+  width: 100%;
+}
+
+
+
+}
+
+
+/* CSS for screens between 601px and 1024px */
+@media (min-width: 601px) and (max-width: 1024px) {
+  
+  .nav-bar  { width: 100%;
+   
+  }
+  
+.logo{
+  margin: 2px;
+}
+
+.nav-bar{
+  margin: 1%;
+  
+  
+}
+/* .main-1{
+  width: 20%;
+} */
+
+.card{
+  width: 100%;
+  margin: 2%;
+}
+
+.proj2{
+  width: 100%;
+}
+
+
+
+}
+
+
+
+@media (max-width: 1024px){
+  
+  .nav-bar  { width: 100%;
+   
+  }
+  
+.logo{
+  margin: 10px;
+}
+
+.nav-bar{
+  margin: 1%;
+  
+  
+}
+/* .main-1{
+  width: 20%;
+} */
+
+.card{
+  width: 100%;
+  margin: 2%;
+}
+
+.proj2{
+  width: 100%;
+}
+
+
+}
+
+@media (max-width: 300px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 20%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 100%;
+  }
+  .six{
+    width: 1%;
+  }
+  .main-1{
+    padding: 15%;
+
+  }
+}
+
+@media (max-width: 400px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 20%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 100%;
+  }
+  .six{
+    width: 1%;
+  }
+  .main-1{
+    padding: 15%;
+    margin: 100%;
+
+  }
+  .second-part{
+    width: 16%;
+  }
+  .first-part{
+    width: 75%;
+    height: 75%;
+  }
+}
+
+@media (max-width: 412px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 20%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 100%;
+  }
+  .six{
+    width: 1%;
+  }
+  .main-1{
+    padding: 33%;
+    margin: 100%;
+
+  }
+  .second-part{
+    width:1%;
+    margin: 1% 1% 15% 1%;
+    padding: 45%;
+  }
+  
+  .first-part{
+    width: 75%;
+    height: 75%;
+  }
+}
+
+
+
+@media (max-width: 414px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 20%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 11%;
+  }
+  .six{
+    width: 100%;
+    padding: 33% ;
+    margin: 25%;
+  }
+  .main-1{
+    padding: 33%;
+    margin: 100%;
+
+  }
+  .second-part{
+    width:22%;
+    margin: 11% 11% 15% 1%;
+    padding: 45%;
+  }
+  
   .first-part{
     width: 100%;
+    
+  }
+}
+
+@media (max-width: 777px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 20%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 100%;
+  }
+  .six{
+    width: 1%;
+  }
+  .main-1{
+    padding: 100%;
+    margin: 100%;
+
+  }
+  .second-part{
+    width:1%;
+    margin: 1% 1% 15% 1%;
+    padding: 45%;
+  }
+  
+  .first-part{
+    width: 75%;
+    height: 75%;
+  }
+}
+@media (max-width: 50px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 20%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 100%;
+  }
+  .six{
+    width: 1%;
+  }
+  .main-1{
+    padding: 1%;
+    margin: 10%;
+
+  }
+  .second-part{
+    width:1%;
+    margin: 1% 1% 15% 1%;
+    padding: 45%;
+  }
+  
+  .first-part{
+    width: 75%;
+    height: 75%;
+  }
+}
+
+@media (max-width: 1024px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 20%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 100%;
+  }
+  .six{
+    width: 1%;
+  }
+  .main-1{
+    padding: 33%;
+    margin: 100%;
+
+  }
+  .second-part{
+    width:1%;
+    margin: 1% 1% 15% 1%;
+    padding: 45%;
+  }
+  
+  .first-part{
+    width: 75%;
+    height: 75%;
+  }
+}
+
+@media (max-width: 820px){
+  .card-img{
+    width: 100%;
+  }
+
+  .third-part{
+    margin: 10%;
+  }
+
+  .card{
+    margin: 10%;
+    padding: 1%;
+    width: 80%;
+  }
+
+  .proj2{
+    padding: 18%;
+    margin-left:30px
+  }
+  .sub-proj{
+    padding: 1%;
+    margin:2% ;
+  }
+  .ex-img1{
+    width: 100%;
+  }
+  .six{
+    width: 11%;
+  }
+  .main-1{
+    padding: 36%;
+    margin: 55%;
+
+  }
+  .second-part{
+    width:1%;
+    margin: 1% 1% 15% 1%;
+    padding: 45%;
+  }
+  
+  .first-part{
+    width: 75%;
+    height: 75%;
   }
 }
